SG-2004-07-30-0: Enhancem.: added a feature to filter the jobs in the
                            scheduler based on their category.
                 Changed:   schedler, schedd.conf(5)
                 Review:    AD

SG-2004-07-29-0: Bugfix:    Resending queue signals broken
                 Changed:   exed, qmaster
                 Issue:     1178
                 Bugtraq:   5079572
                 Review:    EB

CR-2004-07-28-1  Bugfix:    - Startup of qmaster changes act_qmaster to 
                              `hostname`,
                            - Two network cards in exec host: creates wrong 
                              directory / shutdown fails
                 Bugtraq:   5071522, 5079514
                 Issue:     1110, 1113
                 Changed:   install scripts, shadowd, gdi lib
                 Review:    RH

JG-2004-07-29-0: Bugfix:    qrsh starter didn't output reason (strerror), if it
                            couldn't write its pid file.
                 Changed:   qrsh_starter
                 Review:    CR
                            
AA-2004-07-28-0: Bugfix:    Wallclock time limit in qmon
                 Bugtraq:   5078783
                 Issue:     1162
                 Changed:   qmon
                 Review:    CR

SG-2004-07-28-0: Bugfix:    - fixed the event master theading problem
                            - fixed the job names and accouting string evaluation.
                            - removed an abort in qmaster, when sched conf was not
                              valid.
                 Bugtraq:   5075849
                 Issue:     1099
                 Changed:   qmaster, submit.1
                 Review:    JG

JG-2004-07-27-0: Bugfix:    Fixes in reporting file:
                            - pe_task_id for non pe jobs were inconsistend (in 
                              some cases "none", in others "NONE").
                            - Intermediate accounting records contained invalid