@@ -716,14 +716,9 @@ static void start_periodic_tasks(void)
 *******************************************************************************/
 static void setup_lock_service(void)
 {
-   pthread_mutexattr_t attr;
-   
    DENTER(TOP_LAYER, "setup_lock_service");
-
-   pthread_mutexattr_init(&attr);
-   pthread_mutexattr_settype(&attr, PTHREAD_MUTEX_RECURSIVE);
    
-   pthread_mutex_init(&Global_Lock, (const pthread_mutexattr_t *)(&attr));
+   pthread_mutex_init(&Global_Lock, NULL);
 
    sge_set_lock_callback(lock_callback);
    sge_set_unlock_callback(unlock_callback);
